--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -272,3 +272,7 @@ body { margin: 0;  font-family: 'Calibri', sans-serif;}
 .mat-button-toggle-appearance-standard .mat-button-toggle-label-content  {
   line-height: 36px !important;
 }
+
+* {
+  box-sizing: border-box;
+}
