--- a/libs/login/src/lib/login.component.html
+++ b/libs/login/src/lib/login.component.html
@@ -1,13 +1,50 @@
-<div class="auth__con">
-  <div class="auth__left-pane" [ngStyle]="{'backgroundImage': 'url(assets/auth_image.png)'}">
-    <div class="text-center mt-5 mb-5 d-flex flex-column align-items-center">
-      <img src="assets/white_logo.svg" alt="" class="oh-logo img-fluid">
-      <h3 class="font-calibri--bold mat-h3 mb-0 mt-2 oh-logo__text">Optimal Humans</h3>
+<div class="container-fluid min-vh-100">
+  <div class="row">
+    <div class="col-4 min-vh-100 auth__left-pane d-flex align-items-center justify-content-center"
+         [ngStyle]="{'backgroundImage': 'url(assets/auth_image.png)'}">
+      <div class="text-center d-flex flex-column align-items-center">
+        <img src="assets/white_logo.svg" alt="" class="oh-logo img-fluid">
+        <h3 class="font-calibri--bold mat-h3 mb-0 mt-2 oh-logo__text">Optimal Humans</h3>
+      </div>
     </div>
-  </div>
-  <div class="auth__right-pane p-4">
-    <p class="font-sf-pro--italic">Login Works</p>
-
-    <button mat-flat-button color='accent' (click)='login()'>Click To Login</button>
+    <div class="col-8 d-flex align-items-center justify-content-center auth__right-pane">
+      <div class="auth__right-con mx-3">
+        <div class="container-fluid p-0">
+          <div class="row mb-2">
+            <div class="col-12">
+              <h1 class="mat-h1 m-0 mb-1 font-sf-pro--bold">Login</h1>
+              <p class="mat-subheading-2 font-calibri font-weight-normal text-muted mb-0">Enter login credentials</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="container-fluid p-0">
+                <div class="row">
+                  <div class="col-12">
+                    <mat-form-field class="w-100">
+                      <mat-label>Email</mat-label>
+                      <input matInput>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col-12">
+                    <mat-form-field class="w-100">
+                      <mat-label>Password</mat-label>
+                      <input matInput>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <button mat-flat-button color='primary' (click)='login()'>Login</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
