--- a/libs/login/src/lib/login.component.scss
+++ b/libs/login/src/lib/login.component.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 2fr 4fr;
+    grid-template-columns: 1fr 2fr;
   }
 
   &__left-pane {
@@ -12,19 +12,36 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 40px -15px transparentize(black, 0.5);
 
-    &::after {
+    &::before {
       content: '';
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      background: linear-gradient(179.96deg, rgba(37, 39, 60, 0) 45.61%, #25273cd6 81.09%);
+      background: linear-gradient(179.96deg, rgba(37, 39, 60, 0) 45.61%, #25273C 81.09%);
+      mix-blend-mode: normal;
+    }
+
+    &> div {
+      z-index: 1;
+      position: relative;
     }
   }
 
   &__right-pane {
 
   }
+
+  &__right-con {
+    max-width: 600px;
+    width: 100%;
+  }
+
+
 }
