--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav *ngIf="authFacade.loggedIn$ | async" [mode]="isTablet ? 'over' : 'side'" (closed)="isSliding = false"
                (opened)="isSliding = false"
                [fixedInViewport]="true" [opened]="sideBarOpen">
-    <div class="d-flex flex-column justify-content-between h-100">
+    <div class="d-flex flex-column  h-100">
       <div class="text-center mt-5 mb-5 d-flex flex-column align-items-center">
         <img src="assets/white_logo.svg" alt="" class="oh-logo img-fluid">
         <h4 class="font-calibri--bold mat-h4 mb-0 mt-2 oh-logo__text">Optimal Humans</h4>
