--- a/libs/login/src/lib/login.component.html
+++ b/libs/login/src/lib/login.component.html
@@ -1,48 +1,59 @@
-<div class="container-fluid min-vh-100">
-  <div class="row">
-    <div class="col-4 min-vh-100 auth__left-pane d-flex align-items-center justify-content-center"
+<div class='container-fluid min-vh-100'>
+  <div class='row'>
+    <div class='col-4 min-vh-100 auth__left-pane d-flex align-items-center justify-content-center'
          [ngStyle]="{'backgroundImage': 'url(assets/auth_image.png)'}">
-      <div class="text-center d-flex flex-column align-items-center">
-        <img src="assets/white_logo.svg" alt="" class="oh-logo img-fluid">
-        <h3 class="font-calibri--bold mat-h3 mb-0 mt-2 oh-logo__text">Optimal Humans</h3>
+      <div class='text-center d-flex flex-column align-items-center'>
+        <img src='assets/white_logo.svg' alt='' class='oh-logo img-fluid'>
+        <h3 class='font-calibri--bold mat-h3 mb-0 mt-2 oh-logo__text'>Optimal Humans</h3>
       </div>
     </div>
-    <div class="col-8 d-flex align-items-center justify-content-center auth__right-pane">
-      <div class="auth__right-con mx-3">
-        <div class="container-fluid p-0">
-          <div class="row mb-2">
-            <div class="col-12">
-              <h1 class="mat-h1 m-0 mb-1 font-sf-pro--bold">Login</h1>
-              <p class="mat-subheading-2 font-calibri font-weight-normal text-muted mb-0">Enter login credentials</p>
+    <div class='col-8 d-flex align-items-center justify-content-center auth__right-pane'>
+      <div class='auth__right-con mx-3'>
+        <div class='container-fluid p-0'>
+          <div class='row mb-2'>
+            <div class='col-12'>
+              <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Login</h1>
+              <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter login credentials</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="container-fluid p-0">
-                <div class="row">
-                  <div class="col-12">
-                    <mat-form-field class="w-100">
+          <form [formGroup]='loginForm' class='row' (ngSubmit)='submit()'>
+            <div class='col-12'>
+              <div class='container-fluid p-0'>
+                <div class='row'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
                       <mat-label>Email</mat-label>
-                      <input matInput>
+                      <input matInput formControlName='email' required>
+                      <mat-error
+                        *ngIf='loginForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
+                      <mat-error
+                        *ngIf='loginForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row mb-2">
-                  <div class="col-12">
-                    <mat-form-field class="w-100">
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
                       <mat-label>Password</mat-label>
-                      <input matInput>
+                      <input matInput formControlName='password' [type]="passwordHidden ? 'password' : 'text'">
+                      <button type='button' mat-icon-button matSuffix (click)='passwordHidden = !passwordHidden'
+                              [attr.aria-label]="'Hide password'" [attr.aria-pressed]='passwordHidden'>
+                        <mat-icon>{{passwordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
+                      </button>
+                      <mat-error
+                        *ngIf='loginForm.controls.password.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
                     </mat-form-field>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-12">
-                    <button mat-flat-button color='primary' (click)='login()'>Login</button>
+                <div class='row'>
+                  <div class='col-12'>
+                    <button mat-flat-button color='primary' type='submit' [disabled]='authFacade.isLoading$ | async'>Login
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </div>
