feat(OH-29-logout/store): Add local state based logout feature

--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -28,7 +28,7 @@
           <mat-icon class="mr-1">admin_panel_settings</mat-icon>
           Dummy User
         </button>
-        <button mat-flat-button color="accent" class="mini" (click)="authFacade">Logout</button>
+        <button mat-flat-button color="accent" class="mini" (click)="authFacade.logout()">Logout</button>
       </div>
     </mat-toolbar>
     <main>
