--- a/libs/forgot-password/src/lib/forgot-password.component.html
+++ b/libs/forgot-password/src/lib/forgot-password.component.html
@@ -2,38 +2,58 @@
 
 <hidden-innovation-auth-layout>
   <div class='container-fluid p-0'>
-    <div class='row mb-2'>
-      <div class='col-12'>
-        <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Forgot Password</h1>
-        <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter  email address for password reset link.</p>
+    <ng-template [ngIf]="!successLinkSubmit" >
+      <div class='row mb-2'>
+        <div class='col-12'>
+          <h1 class='mat-h1 m-0 mb-1 font-sf-pro--bold'>Forgot Password</h1>
+          <p class='mat-subheading-2 font-calibri font-weight-normal text-muted mb-0'>Enter  email address for password reset link.</p>
+        </div>
       </div>
-    </div>
-
-    <form [formGroup]='forgotForm' class='row' >
-      <div class='col-12'>
-        <div class='container-fluid p-0'>
-          <div class='row mb-3'>
-            <div class='col-12 '>
-              <mat-form-field class='w-100'>
-                <mat-label>Email</mat-label>
-                <input matInput formControlName='email' required>
-                <mat-error
-                  *ngIf='forgotForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
-                <mat-error
-                  *ngIf='forgotForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
-              </mat-form-field>
+      <form [formGroup]='forgotForm' class='row' >
+        <div class='col-12'>
+          <div class='container-fluid p-0'>
+            <div class='row mb-3'>
+              <div class='col-12 '>
+                <mat-form-field class='w-100'>
+                  <mat-label>Email</mat-label>
+                  <input matInput formControlName='email' required>
+                  <mat-error
+                    *ngIf='forgotForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
+                  <mat-error
+                    *ngIf='forgotForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
+                </mat-form-field>
+              </div>
             </div>
-          </div>
-          <div class='row'>
-            <div class='col-12  d-flex justify-content-between'>
-              <button mat-flat-button color='primary' type='submit' >
-                Send Link
-              </button>
+            <div class='row'>
+              <div class='col-12  d-flex justify-content-between'>
+                <button mat-flat-button color='primary' type='submit' (click)="mailSendMessage()" >
+                  Send Link
+                </button>
+                <a mat-button [routerLink]="['/reset-password']">Already received code?</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </ng-template>
 
+    <ng-template [ngIf]="successLinkSubmit" >
+      <div class="container w-50">
+        <div class="row">
+          <div class="col-12 text-center">
+            <img src="../assets/email-graphic.svg" class="card-img">
+          </div>
+        </div>
+        <div class="row d-flex flex-column align-items-center text-center mb-4 mt-4">
+          <h1 class="mat-h1 mb-3 font-weight-bold">We have sent you a mail with link to reset your password</h1>
+          <span class="text-muted">Please check your inbox and spam folder for the mail</span>
+        </div>
+        <div class="row d-flex  justify-content-around text-center">
+          <button mat-flat-button color='primary' type='button' class="cancel-button"
+                  [routerLink]="['/login']"> Back To Login</button>
+
+        </div>
+      </div>
+    </ng-template>
   </div>
 </hidden-innovation-auth-layout>
