--- a/libs/auth/src/lib/login/login.component.html
+++ b/libs/auth/src/lib/login/login.component.html
@@ -13,7 +13,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
-                <input matInput formControlName='email' required>
+                <input matInput type="email" formControlName='email' required>
                 <mat-error
                   *ngIf='loginForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
                 <mat-error
