--- a/libs/reset-password/src/lib/reset-password.component.html
+++ b/libs/reset-password/src/lib/reset-password.component.html
@@ -14,7 +14,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
-                <input matInput formControlName='email'>
+                <input matInput type="email" formControlName='email'>
                 <mat-error
                   *ngIf='resetPassForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
                 <mat-error
@@ -69,17 +69,14 @@
             </div>
           </div>
           <div class='row'>
-            <div class='col-12 d-flex justify-content-between'>
-              <div>
-                <button class="mr-3" mat-flat-button color='primary' type='submit'
-                        [disabled]="store.isResetLoading$ | async">Reset
-                  Password
-                </button>
-                <a mat-flat-button type='button' [routerLink]="['/login']" [disabled]="store.isResetLoading$ | async">
-                  Back To Login
-                </a>
-              </div>
-              <a mat-button [routerLink]="['/reset-password']">Received reset code?</a>
+            <div class='col-12'>
+              <button class="mr-3" mat-flat-button color='primary' type='submit'
+                      [disabled]="store.isResetLoading$ | async">Reset
+                Password
+              </button>
+              <a mat-flat-button type='button' [routerLink]="['/login']" [disabled]="store.isResetLoading$ | async">
+                Back To Login
+              </a>
             </div>
           </div>
         </div>
