--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -30,7 +30,7 @@
         <div class="toolbar__user-icon d-flex align-items-center justify-content-center pointer-event" mat-ripple [routerLink]="['/profile']" [ngStyle]="{'cursor': 'pointer'}">
           <img src='https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80' [ngStyle]="{'width':'50px'}" alt="User Image" class="img-fluid avatar-image">
         </div>
-        <button mat-button color="primary" class="mini mx-1">Dummy User</button>
+        <button mat-button color="primary" class="ml-1 mr-1 mat-subheading-2 mb-0 font-weight-bolder">Dummy User</button>
         <button  mat-icon-button [matMenuTriggerFor]="userBarmenu" >
           <mat-icon>expand_more</mat-icon>
         </button>
