--- a/libs/change-password/src/lib/change-password.component.html
+++ b/libs/change-password/src/lib/change-password.component.html
@@ -1,5 +1,65 @@
 <div class="p-4">
 
-  <p class="font-sf-pro--italic">change-password works!</p>
-
+  <form [formGroup]="changePassForm"   class="container align-self-start w-50  ml-0 pl-0" (ngSubmit)="submitChangePass()">
+    <div class="row mb-4">
+      <div class="col-12 muli-typography">
+        <span class="mat-body-1">Please enter new password along with your old password below fields to update credential of your account.</span>
+      </div>
+    </div>
+    <div class="row mb-2 mt-2">
+      <div class="col-12">
+        <mat-form-field class='w-100'>
+          <mat-label>Old Password</mat-label>
+          <input matInput formControlName='oldPassword' [type]="passwordHidden.oldPass ? 'password' : 'text'">
+          <button type='button' mat-icon-button matSuffix (click)='passwordHidden.oldPass = !passwordHidden.oldPass'>
+            <mat-icon>{{passwordHidden.oldPass ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error
+            *ngIf='changePassForm.controls.oldPassword.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
+          <mat-error
+            *ngIf='changePassForm.controls.oldPassword.errors?.invalid'>{{formValidationService.passwordValidationMessage.invalid}}</mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row mb-2 mt-2">
+      <div class="col-12">
+        <mat-form-field class='w-100'>
+          <mat-label>New Password</mat-label>
+          <input matInput formControlName='newPassword' [type]="passwordHidden.newPass ? 'password' : 'text'">
+          <button type='button' mat-icon-button matSuffix (click)='passwordHidden.newPass = !passwordHidden.newPass'>
+            <mat-icon>{{passwordHidden.newPass ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error
+            *ngIf='changePassForm.controls.newPassword.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
+          <mat-error
+            *ngIf='changePassForm.controls.newPassword.errors?.invalid'>{{formValidationService.passwordValidationMessage.invalid}}</mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row mb-2 mt-2">
+      <div class="col-12">
+        <mat-form-field class='w-100'>
+          <mat-label>Confirm Password</mat-label>
+          <input matInput formControlName='confirmPassword' [type]="passwordHidden.confPass ? 'password' : 'text'">
+          <button type='button' mat-icon-button matSuffix (click)='passwordHidden.confPass = !passwordHidden.confPass'>
+            <mat-icon>{{passwordHidden.confPass ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error
+            *ngIf='changePassForm.controls.confirmPassword.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
+          <mat-error
+            *ngIf='changePassForm.controls.confirmPassword.errors?.invalid'>{{formValidationService.passwordValidationMessage.invalid}}</mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-auto">
+        <button mat-flat-button color="primary" type="submit"
+                class="singIn-button">Submit</button>
+      </div>
+      <div class="col-auto">
+        <button mat-stroked-button type="button" class="singIn-button"
+                [routerLink]="['dashboard']">Cancel</button>
+      </div>
+    </div>
+  </form>
 </div>
