--- a/libs/change-password/src/lib/change-password.component.html
+++ b/libs/change-password/src/lib/change-password.component.html
@@ -40,14 +40,16 @@
       <div class="col-12">
         <mat-form-field class='w-100'>
           <mat-label>Confirm Password</mat-label>
-          <input matInput formControlName='confirmPassword' [type]="passwordHidden.confPass ? 'password' : 'text'">
-          <button type='button' mat-icon-button matSuffix (click)='passwordHidden.confPass = !passwordHidden.confPass'>
+          <input matInput formControlName='confirmPassword'
+                 [type]="passwordHidden.confPass ? 'password' : 'text'">
+          <button type='button' mat-icon-button matSuffix
+                  (click)='passwordHidden.confPass = !passwordHidden.confPass'>
             <mat-icon>{{passwordHidden.confPass ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
           <mat-error
             *ngIf='changePassForm.controls.confirmPassword.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
           <mat-error
-            *ngIf='changePassForm.controls.confirmPassword.errors?.invalid'>{{formValidationService.passwordValidationMessage.invalid}}</mat-error>
+            *ngIf='changePassForm.controls.confirmPassword.errors?.notSame'>{{formValidationService.passwordValidationMessage.mismatch}}</mat-error>
         </mat-form-field>
       </div>
     </div>
