--- a/apps/optimal-human/src/app/app.component.scss
+++ b/apps/optimal-human/src/app/app.component.scss
@@ -10,8 +10,13 @@ mat-sidenav {
 
 .toolbar {
   &__user-icon {
+    max-width: 2rem;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 8px;
+
+    img {
+      position: relative;
+    }
   }
 }
 
@@ -37,6 +42,8 @@ mat-toolbar {
   background-color: white !important;
   height: 80px;
   box-shadow: 0 -15px 60px rgba(0, 0, 0, 0.05);
+  position: relative;
+  z-index: 1;
 }
 
 mat-sidenav-container {
@@ -47,4 +54,11 @@ mat-sidenav-container {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
+}
+
+main {
+  position: relative;
+  z-index: 0;
+  height: calc(100vh - 80px);
+  overflow-y: auto;
 }
