--- a/libs/change-password/src/lib/change-password.component.html
+++ b/libs/change-password/src/lib/change-password.component.html
@@ -1,9 +1,9 @@
 <div class="p-4">
 
   <form [formGroup]="changePassForm"   class="container align-self-start w-50  ml-0 pl-0" (ngSubmit)="submitChangePass()">
-    <div class="row mb-4">
+    <div class="row mb-3">
       <div class="col-12 muli-typography">
-        <span class="mat-body-1">Please enter new password along with your old password below fields to update credential of your account.</span>
+        <span class="mat-body-1">Please enter new password along with your old password in below fields to update your account login credentials.</span>
       </div>
     </div>
     <div class="row mb-2 mt-2">
