--- a/apps/optimal-human/src/app/app.component.scss
+++ b/apps/optimal-human/src/app/app.component.scss
@@ -56,6 +56,27 @@ mat-sidenav-container {
   right: 1rem;
 }
 
+mat-list-item {
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: 0;
+    background-color: black;
+    transition: opacity 200ms cubic-bezier(0.35, 0, 0.25, 1), background-color 200ms cubic-bezier(0.35, 0, 0.25, 1);
+  }
+
+  &:hover {
+    &:after {
+      opacity: .04;
+    }
+  }
+
+}
+
 main {
   position: relative;
   z-index: 0;
