--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -1,1 +1,50 @@
-<p>edit-admin-profile works!</p>
+<div class="p-4">
+
+  <form   class="container align-self-start w-50  ml-0 pl-0" >
+
+    <form [formGroup]="editProfileForm" class='row' >
+      <div class='col-12'>
+        <div class='container-fluid p-0'>
+          <div class='row'>
+            <div class='col-12'>
+              <mat-form-field class='w-100'>
+                <mat-label>Name</mat-label>
+                <input matInput type="text" formControlName='name' required>
+                <mat-error
+                  *ngIf='editProfileForm.controls.name.errors?.required'>{{formValidationService.fieldValidationMessage.required}}</mat-error>
+                <mat-error
+                  *ngIf='editProfileForm.controls.name.errors?.onlyAlpha'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
+                <mat-error
+                  *ngIf='editProfileForm.controls.name.errors?.maxLength'>{{formValidationService.fieldValidationMessage.maxLength}}</mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class='row'>
+            <div class='col-12'>
+              <mat-form-field class='w-100'>
+                <mat-label>Email</mat-label>
+                <input matInput type="email" formControlName='email' required>
+                <mat-error
+                  *ngIf='editProfileForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
+                <mat-error
+                  *ngIf='editProfileForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </form>
+
+    <div class="row mt-4">
+      <div class="col-auto">
+        <button mat-flat-button color="primary" type="submit"
+                class="singIn-button">Submit</button>
+      </div>
+      <div class="col-auto">
+        <button mat-stroked-button type="button" class="singIn-button"
+                [routerLink]="['dashboard']">Cancel</button>
+      </div>
+    </div>
+  </form>
+</div>
