--- a/libs/forgot-password/src/lib/forgot-password.component.html
+++ b/libs/forgot-password/src/lib/forgot-password.component.html
@@ -8,7 +8,7 @@
           reset code on email</p>
       </div>
     </div>
-    <form class='row'>
+    <form class='row' (ngSubmit)="submit()">
       <div class='col-12'>
         <div class='container-fluid p-0'>
           <div class='row mb-3'>
@@ -27,7 +27,7 @@
             <div class='col-12  d-flex align-items-center justify-content-between'>
               <div class="d-flex">
                 <button class="mr-3" mat-flat-button color='primary' type='submit'
-                        [disabled]="store.isForgotLoading$ | async" (click)="submit()">
+                        [disabled]="store.isForgotLoading$ | async">
                   Send Code
                 </button>
                 <a mat-flat-button type='button' [routerLink]="['/login']"
