--- a/libs/auth/src/lib/login/login.component.html
+++ b/libs/auth/src/lib/login/login.component.html
@@ -25,7 +25,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Password</mat-label>
-                <input matInput formControlName='password' [type]="passwordHidden ? 'password' : 'text'">
+                <input hiddenInnovationDisableCopyPaste matInput formControlName='password' [type]="passwordHidden ? 'password' : 'text'">
                 <button type='button' mat-icon-button matSuffix (click)='passwordHidden = !passwordHidden'
                         [attr.aria-label]="'Hide password'" [attr.aria-pressed]='passwordHidden'>
                   <mat-icon>{{passwordHidden ? 'visibility_off' : 'visibility'}}</mat-icon>
