--- a/libs/reset-password/src/lib/reset-password.component.html
+++ b/libs/reset-password/src/lib/reset-password.component.html
@@ -40,7 +40,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Password</mat-label>
-                <input matInput formControlName='password' [type]="passwordHidden.pass ? 'password' : 'text'">
+                <input hiddenInnovationDisableCopyPaste matInput formControlName='password' [type]="passwordHidden.pass ? 'password' : 'text'">
                 <button type='button' mat-icon-button matSuffix (click)='passwordHidden.pass = !passwordHidden.pass'>
                   <mat-icon>{{passwordHidden.pass ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
@@ -55,7 +55,7 @@
             <div class='col-12'>
               <mat-form-field class='w-100'>
                 <mat-label>Confirm Password</mat-label>
-                <input matInput formControlName='confirmPassword'
+                <input hiddenInnovationDisableCopyPaste matInput formControlName='confirmPassword'
                        [type]="passwordHidden.confPass ? 'password' : 'text'">
                 <button type='button' mat-icon-button matSuffix
                         (click)='passwordHidden.confPass = !passwordHidden.confPass'>
