feat(oh-83-stats): design init

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -1,5 +1,44 @@
 <div class="p-4">
 
-  <p class="font-sf-pro--italic">Dashboard Works</p>
+  <div class="row">
+    <div class="col-12 col-xl-8">
+      <div class='row mb-4'>
+        <div class='col-6 col-lg-3'>
+          <mat-card>
+            <mat-card-content class="text-center">
+              <mat-icon class='card-icon'>people</mat-icon>
+              <h1 class='card-text mb-0'>200</h1>
+              <div class='card-text card-text--secondary'>Total Users</div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class='col-6 col-lg-3'>
+          <mat-card>
+            <mat-card-content class="text-center">
+              <mat-icon class='card-icon'>task</mat-icon>
+              <h1 class='card-text mb-0'>100</h1>
+              <div class='card-text card-text--secondary'>Total Tests</div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+      <mat-card>
+        <h1 class='card-header'>Statistics</h1>
+        <mat-card-content>
+          <canvas >
+          </canvas>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class='col-12 col-xl-4'>
+      <div class='row'>
+        <div class='col-12 col-md-6 col-xl-12'>
+          <mat-card>
+<!--            <mat-calender></mat-calender>-->
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
