--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="p-4">
 
   <div class="row">
-    <div class="col-12 col-xl-8">
+    <div class="col-12 col-xl-8 mb-4 ">
       <div class='row mb-4'>
         <div class='col-6 col-lg-3'>
           <mat-card>
             <mat-card-content class="text-center">
               <mat-icon class='card-icon'>people</mat-icon>
-              <h1 class='card-text mb-0'>200</h1>
-              <div class='card-text card-text--secondary'>Total Users</div>
+              <h2 class='mat-h2 font-calibri m-0'>200</h2>
+              <p class='mat-subtitle'>Total Users</p>
             </mat-card-content>
           </mat-card>
         </div>
@@ -16,28 +16,46 @@
           <mat-card>
             <mat-card-content class="text-center">
               <mat-icon class='card-icon'>task</mat-icon>
-              <h1 class='card-text mb-0'>100</h1>
-              <div class='card-text card-text--secondary'>Total Tests</div>
+              <h2 class='mat-h2 font-calibri m-0'>100</h2>
+              <p class='mat-subtitle'>Total Tests</p>
             </mat-card-content>
           </mat-card>
         </div>
       </div>
       <mat-card>
         <h1 class='card-header'>Statistics</h1>
-        <mat-card-content>
-          <canvas >
+        <mat-card-content >
+          <canvas baseChart height="500"
+                  chartType="line"
+                  [colors]="chartColors"
+                  [datasets]="chartData"
+                  [labels]="chartLabels"
+                  [legend]="chartLegend"
+                  [options]="chartOptions">
           </canvas>
         </mat-card-content>
       </mat-card>
     </div>
-    <div class='col-12 col-xl-4'>
+    <div class='col-12 col-xl-4 mb-4'>
       <div class='row'>
-        <div class='col-12 col-md-6 col-xl-12'>
+        <div class='col-12 col-md-6 col-xl-12 p-0 mb-4'>
           <mat-card>
-<!--            <mat-calender></mat-calender>-->
+            <mat-calendar ></mat-calendar>
+          </mat-card>
+        </div>
+        <div class='col-12 col-md-6 col-xl-12 p-0 mb-4  '>
+          <mat-card>
+            <canvas baseChart height='200'
+                    chartType="bar"
+                    [datasets]="chartData"
+                    [labels]="chartLabels"
+                    [legend]="chartLegend"
+                    [options]="chartOptions">
+            </canvas>
           </mat-card>
         </div>
       </div>
+
     </div>
   </div>
 
