feat(OH-87-edit-profile): Add API integration, state solution for auth store and updated core auth store as well

--- a/apps/optimal-human/src/app/app.component.html
+++ b/apps/optimal-human/src/app/app.component.html
@@ -45,7 +45,9 @@
                 src='https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80'
                 alt="User Image" class="img-fluid avatar-image">
             </div>
-            <span>Dummy User</span>
+            <ng-container *ngIf='(authFacade.authAdmin$ | async) as admin'>
+              <span>{{admin.name || '--'}}</span>
+            </ng-container>
           </div>
         </button>
         <button mat-icon-button [matMenuTriggerFor]="userBarmenu">
