--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -1,6 +1,6 @@
 <div class='p-4'>
 
-  <form [formGroup]='editProfileForm' class='container align-self-start w-50  ml-0 pl-0'>
+  <form [formGroup]='editProfileForm' class='container align-self-start w-50  ml-0 pl-0' (ngSubmit)='submit()'>
     <div class='row mb-3'>
       <div class='col-12 muli-typography'>
         <span class='mat-body-1'>Update logged in admin profile details</span>
@@ -11,13 +11,16 @@
       <div class='col-12'>
         <mat-form-field class='w-100'>
           <mat-label>Name</mat-label>
-          <input matInput type='text' formControlName='name' required>
+          <input matInput autocomplete='no' type='text' formControlName='name' required>
           <mat-error
-            *ngIf='editProfileForm.controls.name.errors?.required'>Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
+            *ngIf='editProfileForm.controls.name.errors?.required'>
+            Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
           <mat-error
             *ngIf='editProfileForm.controls.name.errors?.alpha'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
           <mat-error
-            *ngIf='editProfileForm.controls.name.errors?.maxLength'>{{formValidationService.fieldValidationMessage.maxLength}}</mat-error>
+            *ngIf='editProfileForm.controls.name.errors?.maxLength'>Must not
+            exceed {{formValidationService.FIELD_VALIDATION_VALUES.NAME_LENGTH}} character limit
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
@@ -25,24 +28,35 @@
     <div class='row mb-2'>
       <div class='col-12'>
         <mat-form-field class='w-100'>
-          <mat-label>Email</mat-label>
-          <input autocomplete='no' matInput type='email' formControlName='email' required>
+          <mat-label>Username</mat-label>
+          <input matInput autocomplete='no' type='text' formControlName='username' required>
           <mat-error
-            *ngIf='editProfileForm.controls.email.errors?.required'>{{formValidationService.emailValidationMessage.required}}</mat-error>
+            *ngIf='editProfileForm.controls.username.errors?.required'>
+            Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
           <mat-error
-            *ngIf='editProfileForm.controls.email.errors?.email'>{{formValidationService.emailValidationMessage.invalid}}</mat-error>
+            *ngIf='editProfileForm.controls.username.errors?.alphaNumeric'>Must not contain any special character or
+            white spaces.
+          </mat-error>
+          <mat-error
+            *ngIf='editProfileForm.controls.username.errors?.maxLength'>Must not
+            exceed {{formValidationService.FIELD_VALIDATION_VALUES.USERNAME_LENGTH}} character limit
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
 
     <div class='row'>
       <div class='col-12 d-flex'>
-        <button mat-flat-button
-                class='mr-3'
-                color='primary' type='submit'>Submit
+        <button
+          mat-flat-button
+          [disabled]='store.isEditLoading$ | async'
+          class='mr-3'
+          color='primary' type='submit'>Update
         </button>
-        <button mat-stroked-button type='button'
-                [routerLink]="['dashboard']">Cancel
+        <button
+          [disabled]='store.isEditLoading$ | async'
+          mat-stroked-button type='button'
+          [routerLink]="['dashboard']">Cancel
         </button>
       </div>
     </div>
