feat(user-listing):tabular ui and dummy data

--- a/libs/change-password/src/lib/change-password.component.html
+++ b/libs/change-password/src/lib/change-password.component.html
@@ -17,7 +17,8 @@
           <mat-error
             *ngIf='changePassForm.controls.password.errors?.required'>{{formValidationService.passwordValidationMessage.required}}</mat-error>
           <mat-error
-            *ngIf='changePassForm.controls.password.errors?.invalid'>{{formValidationService.passwordValidationMessage.invalid}}</mat-error>
+            *ngIf='changePassForm.controls.password.errors?.invalid'>
+            {{formValidationService.passwordValidationMessage.invalid}}</mat-error>
         </mat-form-field>
       </div>
     </div>
