feat(user-list): pagination add align item

--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -56,9 +56,9 @@
             <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
           </table>
 
-          <div class="row  m-0">
+          <div class="row flex-row-reverse  m-0 mb-5">
 
-            <div class="mt-2 ">
+            <div class="my-2">
               <mat-paginator [pageSize]="pageSize" [length]="resultsLength" [pageIndex]="pageIndex"
                              [pageSizeOptions]="pageSizeOptions"
                              (page)="pageEvent = $event; onPaginateChange($event)"></mat-paginator>
