--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -3,7 +3,7 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-12'>
-          <table mat-table [dataSource]='users' class='w-100' [fixedLayout]='true'>
+          <table mat-table [dataSource]='users' class='w-100'>
 
             <ng-container matColumnDef='name'>
               <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.NAME}}</th>
@@ -37,16 +37,21 @@
             </ng-container>
 
             <ng-container matColumnDef='action'>
-              <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+              <th mat-header-cell *matHeaderCellDef [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
               <td mat-cell *matCellDef='let row'>
-                <button mat-icon-button
-                        color='primary' class='mr-2'>
-                  <mat-icon>create</mat-icon>
+                <button mat-icon-button [matMenuTriggerFor]='userListMenu'>
+                  <mat-icon>more_vert</mat-icon>
                 </button>
-                <button mat-icon-button
-                        color='primary'>
-                  <mat-icon>visibility</mat-icon>
-                </button>
+                <mat-menu #userListMenu='matMenu'>
+                  <button mat-menu-item disabled>
+                    <mat-icon>create</mat-icon>
+                    <span>Edit</span>
+                  </button>
+                  <button mat-menu-item [routerLink]='["../details", row?.id]'>
+                    <mat-icon>visibility</mat-icon>
+                    <span>View</span>
+                  </button>
+                </mat-menu>
               </td>
             </ng-container>
 
