feat(user-detail): user detail field add

--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -19,13 +19,25 @@
     <div class='col-4'>
       <div class="form-group">
         <div class="font-calibri--bold">
-          <label class="mat-subheading-2">Name</label>
+          <label class="mat-subheading-2">NAME</label>
         </div>
         <div class="font-sf-pro--bold mt-2">
           <h4 class='mat-body-2 font-weight-light'>Deepak Kumar</h4>
         </div>
+      </div>
+      </div>
+  </div>
+  <div class="row mb-4">
+    <div class='col-4'>
+      <div class="form-group">
+        <div class="font-calibri--bold">
+          <label class="mat-subheading-2">EMAIL ID</label>
+        </div>
+        <div class="font-sf-pro--bold mt-2">
+          <h4 class='mat-body-2 font-weight-light'>deepak@nickelfox.com</h4>
         </div>
       </div>
+    </div>
     <div class='col-4'>
       <div class="form-group">
         <div class="font-calibri--bold">
@@ -39,10 +51,10 @@
     <div class='col-4'>
       <div class="form-group">
         <div class="font-calibri--bold">
-          <label class="mat-subheading-2">EMAIL ID</label>
+          <label class="mat-subheading-2">COUNTRY/LOCATION</label>
         </div>
         <div class="font-sf-pro--bold mt-2">
-          <h4 class='mat-body-2 font-weight-light'>deepak@nickelfox.com</h4>
+          <h4 class='mat-body-2 font-weight-light'>US</h4>
         </div>
       </div>
     </div>
@@ -68,6 +80,16 @@
         <div class="font-sf-pro--bold mt-2">
           <h4 class='mat-body-2 font-weight-light'>Standard
           </h4>
+        </div>
+      </div>
+    </div>
+    <div class='col-4'>
+      <div class="form-group">
+        <div class="font-calibri--bold">
+          <label class="mat-subheading-2">STATUS</label>
+        </div>
+        <div class="font-sf-pro--bold mt-2">
+          <h4 class='mat-body-2 font-weight-light'>Active</h4>
         </div>
       </div>
     </div>
