feat(user-detail): user detail responsive

--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -1,97 +1,98 @@
 <div class='container-fluid p-4'>
-  <div class="row mb-4 ">
-    <div class="col-12 d-flex align-items-center justify-content-end">
-      <button mat-flat-button color='primary' class="ml-3" type="button">{{actionBtnText.edit}}</button>
-      <button mat-flat-button color='primary' class="ml-3" type="button">{{actionBtnText.userBlockState.unblocked}}</button>
-      <button mat-flat-button color='primary' class="ml-3" type="button">{{actionBtnText.delete}}</button>
-      </div>
+  <div class='row mb-4 '>
+    <div class='col-12 d-flex align-items-center justify-content-end'>
+      <button mat-flat-button color='primary' class='ml-3' type='button'>{{actionBtnText.edit}}</button>
+      <button mat-flat-button color='primary' class='ml-3'
+              type='button'>{{actionBtnText.userBlockState.unblocked}}</button>
+      <button mat-flat-button color='primary' class='ml-3' type='button'>{{actionBtnText.delete}}</button>
     </div>
-  <div class="row mb-4">
-    <div class='col-4'>
-      <div class="app__thumbnail rounded-circle overflow-hidden"
+  </div>
+  <div class='row mb-4'>
+    <div class='col-sm-4'>
+      <div class='app__thumbnail rounded-circle overflow-hidden'
            [ngStyle]="{height: imageSize + 'px', width: imageSize + 'px'}">
         <img [src]="'https://dummyimage.com/'+imageSize+'x'+imageSize+'/F3F7FC/0F0532&text=++No+Image++'">
       </div>
 
     </div>
   </div>
-  <div class="row mb-4">
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">NAME</label>
+  <div class='row mb-4'>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>NAME</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>Deepak Kumar</h4>
         </div>
       </div>
-      </div>
+    </div>
   </div>
-  <div class="row mb-4">
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">EMAIL ID</label>
+  <div class='row mb-4'>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>EMAIL ID</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>deepak@nickelfox.com</h4>
         </div>
       </div>
     </div>
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">USER NAME</label>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>USER NAME</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>deepakkumar1234</h4>
         </div>
       </div>
     </div>
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">COUNTRY/LOCATION</label>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>COUNTRY/LOCATION</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>US</h4>
         </div>
       </div>
     </div>
   </div>
-  <div class="row mb-4">
+  <div class='row mb-4'>
 
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">LANGUAGE DETAIL</label>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>LANGUAGE DETAIL</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>English
           </h4>
         </div>
       </div>
     </div>
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">ROLE</label>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>ROLE</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>Standard
           </h4>
         </div>
       </div>
     </div>
-    <div class='col-4'>
-      <div class="form-group">
-        <div class="font-calibri--bold">
-          <label class="mat-subheading-2">STATUS</label>
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>STATUS</label>
         </div>
-        <div class="font-sf-pro--bold mt-2">
+        <div class='font-sf-pro--bold mt-2'>
           <h4 class='mat-body-2 font-weight-light'>Active</h4>
         </div>
       </div>
     </div>
-    </div>
+  </div>
 </div>
