feat(user-detail): date of joining add

--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -95,4 +95,17 @@
       </div>
     </div>
   </div>
+  <div class='row mb-4'>
+
+    <div class='col-sm-4'>
+      <div class='form-group'>
+        <div class='font-calibri--bold'>
+          <label class='mat-subheading-2'>DATE OF JOINING</label>
+        </div>
+        <div class='font-sf-pro--bold mt-2'>
+          <h4 class='mat-body-2 font-weight-light'>10-10-2020</h4>
+        </div>
+      </div>
+      </div>
+  </div>
 </div>
