feat(user-detail): date of joining add

--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -103,7 +103,7 @@
           <label class='mat-subheading-2'>DATE OF JOINING</label>
         </div>
         <div class='font-sf-pro--bold mt-2'>
-          <h4 class='mat-body-2 font-weight-light'>10-10-2020</h4>
+          <h4 class='mat-body-2 font-weight-light'>Aug 13, 2021</h4>
         </div>
       </div>
       </div>
